--- a/config/config.ini
+++ b/config/config.ini
@@ -3,6 +3,7 @@ server.port = 8080
 name = resk
 enabled=yes
 time=10s
+rpc.port = 8082
 
 #mysql config
 [mysql]
@@ -18,3 +19,20 @@ setMaxIdleconns=2
 setMaxopenConns=5
 setConnMaxLifetime=8h
 loggingEnabled = true
+
+[system.account]
+userID=10001
+userName = system
+accountName =system_red_account
+;32位
+accountNo= 10000020210210100000000000000001
+
+[envelope]
+link=/v1/envelope/link
+domain=http://loacalhost
+
+[redis]
+addr = 127.0.0.1:6379
+maxIdle = 2
+maxActive = 5
+timeout = 20s
